@@ -329,7 +329,7 @@ class TRJReader(base.Reader):
             while True:
                 next(self)
                 counter += 1
-        except EOFError:
+        except StopIteration:
             self.rewind()
 
         return counter
